--- a/My_Projects/random-quote-gen/package.json
+++ b/My_Projects/random-quote-gen/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "sass": "^1.53.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "start": "react-scripts start",
