--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fcc-learn-node-with-express",
+  "author": "Cg",
   "version": "0.1.0",
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -10,6 +11,12 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start:prod": "set NODE_ENV=production&&nodemon server.js",
+    "watch": "nodemon --ext *"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "livereload": "^0.9.3",
+    "nodemon": "^2.0.19"
   }
 }
