added effect allowing for time countdown + using seconds/minutes number basis

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 **/.DS_Store
 **/node_modules
 **/Cg9291.github.io
+**/-portfolio-index
+**/NODEJS/Node_FCC_Tutorial/boilerplate-express
+**/NODEJS/Node_FCC_Tutorial/boilerplate-npm
