--- a/Main_Folder/MY_PROJECTS/form_Api_Node/package.json
+++ b/Main_Folder/MY_PROJECTS/form_Api_Node/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "connect-livereload": "^0.6.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "livereload": "^0.9.3",
