--- a/Main_Folder/MY_PROJECTS/form_Api_Node/package.json
+++ b/Main_Folder/MY_PROJECTS/form_Api_Node/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "connect-livereload": "^0.6.1",
     "express": "^4.18.1",
     "sass": "^1.55.0"
