--- a/Main_Folder/NODEJS/NODE_DOCUMENTATION_TUTORIALS/package.json
+++ b/Main_Folder/NODEJS/NODE_DOCUMENTATION_TUTORIALS/package.json
@@ -3,6 +3,16 @@
 	"version": "0.1.0",
 	"type": "module",
 	"dependencies": {
-		"body-parser": "^1.20.2"
+		"body-parser": "^1.20.2",
+		"livereload": "^0.9.3"
+	},
+	"devDependencies": {
+		"concurrently": "^8.2.0",
+		"nodemon": "^3.0.1"
+	},
+	"scripts": {
+		"start": "node server.js",
+		"watch": "concurrently \" nodemon --ext *\" \" livereload -d -p 3001\"",
+		"live":"livereload"
 	}
 }
