--- a/Main_Folder/NODEJS/NODE_FCC_PROJECTS/boilerplate-project-urlshortener/package.json
+++ b/Main_Folder/NODEJS/NODE_FCC_PROJECTS/boilerplate-project-urlshortener/package.json
@@ -2,11 +2,11 @@
   "name": "shorturl",
   "version": "0.0.3",
   "description": "API project for freeCodeCamp",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
