--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 **/Main_Folder/MY_PROJECTS/Pokedex
 **/Main_Folder/MY_PROJECTS/Portfolio
 **/Main_Folder/MY_PROJECTS/twitter_clone
+**/Awesome-CV
 **/.env
 **.env
 .env
