restructured navigation scss

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 **/Twitter-Clone
 **/Main_Folder/MY_PROJECTS/Pokedex
 **/Main_Folder/MY_PROJECTS/Portfolio
+**/Main_Folder/MY_PROJECTS/Twitter_Clone
 **/.env
 **.env
 .env
